transcribed user stories

--- a/newwork.html
+++ b/newwork.html
@@ -89,18 +89,11 @@
     "Split Jerk",
     ];
     var workouts = [
-       {
-        Name: "Fran",
-        Reps: "21-15-9",
-        Rds: "3",
-        Move1: {
-          Movement: "Thrusters",
-          Weight: "95/75",
-        },
-        Move2: {
-          Movement: "PullUps",
-        }
-      }
+      "Amanda",
+      "Annie",
+      "Fran",
+      "Murph",
+      "Filthy Fifty"
     ];
     $( "#movements" ).autocomplete({
       source: movements
