--- a/index.html
+++ b/index.html
@@ -89,24 +89,21 @@
     "Split Jerk",
     ];
     var workouts = [
-       {
-        Name: "Fran",
-        Reps: "21-15-9",
-        Rds: "3",
-        Move1: {
-          Movement: "Thrusters",
-          Weight: "95/75",
-        },
-        Move2: {
-          Movement: "PullUps",
-        }
-      }
+       "Amanda",
+       "Annie",
+       "Fran",
+       "Murph",
+       "Filthy Fifty"
     ];
+
     $( "#movements" ).autocomplete({
       source: movements
     });
     $("#workoutList").autocomplete({
       source: workouts
+    });
+    $(".repCount").autocomplete({
+      source: reps
     });
   });
 
@@ -151,6 +148,12 @@
         <label class="whatWork" for="movements">What Did You Do Today?</label><br>
         <input id="movements">
       </div>
+      <!-- <section class="movementInfo">
+        <label class="reps" for="repCount">Reps:</label>
+        <input class="repCount" type="text"><br>
+        <label class="rds" for="rdsCount">Rds:</label>
+        <input class="rdsCount" type="text">
+      </section> -->
       <div class="ui-widget workoutList hidden">
         <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
         <input id="workoutList">
@@ -175,7 +178,7 @@
       $('.movementsList').removeClass('hidden')
       $(".addWorkout h4").text("(+)Add Workout");
     }
-  }; 
+  };
     });
 
 
