--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
   .save {
     margin-top: 5%;
   }
+  .main-nav {
+    z-index: 1;
+  }
   </style>
  <script>
  //Array of movements for the input box of workouts
@@ -111,11 +114,11 @@
   </script>
 </head>
 <body>
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-default main-nav" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#cross-menu">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -128,7 +131,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="cross-menu">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Dash<span class="sr-only">(current)</span></a></li>
         <li><a href="#">New Workout</a></li>
@@ -139,7 +142,7 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
+  </nav>
   <div class="container-fluid">
 
     <section class="main">
