--- a/login.html
+++ b/login.html
@@ -108,12 +108,12 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#cross-menu">
+        <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#cross-menu">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
+        </button> -->
         <a class="navbar-brand" href="#">
         <img class="ree" src="images/reebokxfit.png" alt="">
         </a>
@@ -121,7 +121,7 @@
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="cross-menu">
+      <!-- <div class="collapse navbar-collapse" id="cross-menu">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Dash<span class="sr-only">(current)</span></a></li>
           <li><a href="#">New Workout</a></li>
@@ -130,7 +130,7 @@
           <li><a href="#">Workout Ideas</a></li>
           <li><a href="#">Logout</a></li>
         </ul>
-      </div><!-- /.navbar-collapse -->
+      </div> --><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
     <section class="kettleBox">
