--- a/login.html
+++ b/login.html
@@ -13,7 +13,12 @@
     body: 0;
   }
   .navbar {
-    background-color: #171515;
+    background-color: rgba(188, 37, 54, 0.8);
+    margin: 0;
+    border: none;
+  }
+  .appName {
+    color: #eee;
   }
   a, a:hover, a:active {
     text-decoration: none;
@@ -41,10 +46,6 @@
    .brand {
     width: 30px;
     padding-left: 30%;
-  }
-  .navbar {
-    margin: 0;
-    border: none;
   }
   .ree {
     width: 40px;
@@ -101,9 +102,6 @@
   }
    .container-fluid>.navbar-header {
      margin-right: 0;
-   }
-   .appName {
-     color: white;
    }
    .background-img {
      z-index: -1;
