--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 
     <!-- build:css({.tmp,src}) styles/app.css -->
     <link rel="stylesheet" href="app/index.css">
+    <link rel="stylesheet" href="app/custom.css">
     <!-- endbuild -->
 
     <!-- build:js scripts/modernizr.js -->
