started ideas for actual fb username and pw screen

--- a/login.html
+++ b/login.html
@@ -7,109 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
-  <style>
-  body {
-    margin: 0;
-    body: 0;
-  }
-  .navbar {
-    background-color: rgba(188, 37, 54, 0.8);
-    margin: 0;
-    border: none;
-  }
-  .appName {
-    color: #eee;
-  }
-  a, a:hover, a:active {
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  h1 {
-    margin: 0;
-    padding: 2% 15%;
-    font-family: 'Stardos Stencil', 'Arial';
-    font-size: 30pt;
-  }
-  .container-fluid {
-    padding: 0;
-    position: relative;
-    overflow: hidden;
-  }
-  .main-nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1;
-  }
-   .brand {
-    width: 30px;
-    padding-left: 30%;
-  }
-  .ree {
-    width: 40px;
-    padding-left: 20%;;
-  }
-  .name {
-    text-align: center;
-  }
-  .main {
-    padding: 8%;
-    width: 100%;
-    margin: 0 auto;
-    background: rgba(5,5,5,0.5);
-    text-align: center;
-    height: 100vh;
-  }
-  .kettleBox {
-    padding: 8%;
-    width: 100%;
-    margin: 0 auto;
-    background: rgba(5,5,5,0.5);
-    text-align: center;
-    height: 100vh;
-    position: relative;
-  }
-  .whatWork {
-    font-size: 20pt;
-    padding-bottom: 5%;
-    color: white;
-  }
-  h3 {
-    color: white;
-    margin: 0;
-    padding: 0;
-  }
-  h4 {
-    color: white;
-    font-weight: bold;
-  }
-  .save {
-    margin-top: 5%;
-  }
-  .kettle {
-    width: 50%;
-    margin: 50% auto 0 auto;
-  }
-  .kettleBox footer {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    color: lightgray;
-  }
-   .container-fluid>.navbar-header {
-     margin-right: 0;
-   }
-   .background-img {
-     z-index: -1;
-     position: absolute;
-     top: 0;
-     right: -103%;
-   }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
