--- a/newwork.html
+++ b/newwork.html
@@ -3,147 +3,58 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cross Track</title>
+  <title>Activ8</title>
+  <link href='http://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-  <style>
-  body {
-    margin: 0;
-    body: 0;
-  }
-  .navbar {
-    background-color: #171515;
-  }
-  a, a:hover, a:active {
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  h1 {
-    margin: 0;
-    padding: 2% 0;
-  }
-  .container-fluid {
-    padding: 0;
-  }
-   .brand {
-    width: 30px;
-    padding-left: 30%;
-  }
-  .navbar {
-    margin: 0;
-    border: none;
-  }
-  .ree {
-    width: 40px;
-    padding-left: 20%;;
-  }
-  .name {
-    text-align: center;
-  }
-  .main {
-    padding: 8%;
-    width: 100%;
-    margin: 0 auto;
-    background: rgba(5,5,5,0.5);
-    text-align: center;
-    height: 100vh;
-  }
-  .whatWork {
-    font-size: 20pt;
-    padding-bottom: 5%;
-    color: white;
-  }
-  h4 {
-    color: white;
-    font-weight: bold;
-  }
-  .save {
-    margin-top: 5%;
-  }
-  </style>
- <script>
- //Array of movements for the input box of workouts
-  $(function() {
-    var movements = [
-    "Pull Ups",
-    "Push Ups",
-    "Sit Ups",
-    "Clean",
-    "Power Clean",
-    "Squat Clean",
-    "Hang Clean",
-    "Hang Squat Clean",
-    "Snatch",
-    "Power Snatch",
-    "Squat Snatch",
-    "Hang Snatch",
-    "Hang Squat Snatch",
-    "Press",
-    "Strict Press",
-    "Push Press",
-    "Jerk",
-    "Push Jerk",
-    "Split Jerk",
-    ];
-    var workouts = [
-      "Amanda",
-      "Annie",
-      "Fran",
-      "Murph",
-      "Filthy Fifty"
-    ];
-    $( "#movements" ).autocomplete({
-      source: movements
-    });
-    $("#workoutList").autocomplete({
-      source: workouts
-    });
-  });
-
-
-  </script>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">
-      <img class="ree" src="images/reebokxfit.png" alt="">
-      </a>
-      <a class="name" href="#"><section class="appName"><h1>Cross Track</h1></section></a>
-    </div>
+    <background class="background-img">
+      <img src="images/boxbg.jpg" alt="">
+    </background>
+    <nav class="navbar navbar-default main-nav" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#cross-menu">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button> -->
+        <a class="navbar-brand" href="#">
+        <img class="ree" src="images/reebokxfit.png" alt="">
+        </a>
+        <a class="name" href="#"><section class="appName"><h1>Activ8</h1></section></a>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Dash<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">New Workout</a></li>
-        <li><a href="#">History</a></li>
-        <li><a href="#">PR's</a></li>
-        <li><a href="#">Workout Ideas</a></li>
-        <li><a href="#">Logout</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-  <div class="container-fluid">
-
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <!-- <div class="collapse navbar-collapse" id="cross-menu">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Dash<span class="sr-only">(current)</span></a></li>
+          <li><a href="#">New Workout</a></li>
+          <li><a href="#">History</a></li>
+          <li><a href="#">PR's</a></li>
+          <li><a href="#">Workout Ideas</a></li>
+          <li><a href="#">Logout</a></li>
+        </ul>
+      </div> --><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+    </nav>
     <section class="main">
     <!-- <h1>Cross Check <span class="glyphicon glyphicon-ok"></span></h1> -->
       <div class="ui-widget movementsList">
         <label class="whatWork" for="movements">What Did You Do Today?</label><br>
         <input id="movements">
       </div>
+      <!-- <section class="movementInfo">
+        <label class="reps" for="repCount">Reps:</label>
+        <input class="repCount" type="text"><br>
+        <label class="rds" for="rdsCount">Rds:</label>
+        <input class="rdsCount" type="text">
+      </section> -->
       <div class="ui-widget workoutList hidden">
         <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
         <input id="workoutList">
@@ -155,6 +66,8 @@
   </section>
 
 </div>
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script>
   $(".addWorkout").on('click', function(){
@@ -170,8 +83,51 @@
     }
   };
     });
-
-
 </script>
+<script>
+//Array of movements for the input box of workouts
+ $(function() {
+   var movements = [
+   "Pull Ups",
+   "Push Ups",
+   "Sit Ups",
+   "Clean",
+   "Power Clean",
+   "Squat Clean",
+   "Hang Clean",
+   "Hang Squat Clean",
+   "Snatch",
+   "Power Snatch",
+   "Squat Snatch",
+   "Hang Snatch",
+   "Hang Squat Snatch",
+   "Press",
+   "Strict Press",
+   "Push Press",
+   "Jerk",
+   "Push Jerk",
+   "Split Jerk",
+   ];
+   var workouts = [
+      "Amanda",
+      "Annie",
+      "Fran",
+      "Murph",
+      "Filthy Fifty"
+   ];
+
+   $( "#movements" ).autocomplete({
+     source: movements
+   });
+   $("#workoutList").autocomplete({
+     source: workouts
+   });
+   $(".repCount").autocomplete({
+     source: reps
+   });
+ });
+
+
+ </script>
 </body>
 </html>
