fab9: add firebase link in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>CrossTrack</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp,src}) styles/vendor.css -->
