--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="css/styles.css">
-
 </head>
 <body>
   <div class="container-fluid">
@@ -44,101 +43,91 @@
       </div> --><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
-    <section class="kettleBox">
-
-      <figure>
-        <a href="#"><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
-          <figcaption>
-            <a href="#"><h3>Login</h3></a>
-          </figcaption>
-      </figure>
-      <footer><em>Privacy Policy</em></footer>
+    <section class="main">
     <!-- <h1>Cross Check <span class="glyphicon glyphicon-ok"></span></h1> -->
-      <!-- <div class="ui-widget movementsList">
+      <div class="ui-widget movementsList">
         <label class="whatWork" for="movements">What Did You Do Today?</label><br>
         <input id="movements">
       </div>
-      <section class="movementInfo">
+      <!-- <section class="movementInfo">
         <label class="reps" for="repCount">Reps:</label>
         <input class="repCount" type="text"><br>
         <label class="rds" for="rdsCount">Rds:</label>
         <input class="rdsCount" type="text">
-      </section>
+      </section> -->
       <div class="ui-widget workoutList hidden">
         <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
         <input id="workoutList">
       </div>
       <a href="#"><h4>(+)Add Movement</h4></a>
       <a class="addWorkout removeWorkout" ><h4>(+)Add Workout</h4></a>
-          <button class="save btn btn-primary" type="submit">Save</button>
-        </div> -->
-    </section>
+    <button class="save btn btn-primary" type="submit">Save</button>
+  </div>
+  </section>
 
-      </div>
-      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-      <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-      <script>
-      //Array of movements for the input box of workouts
-       $(function() {
-         var movements = [
-         "Pull Ups",
-         "Push Ups",
-         "Sit Ups",
-         "Clean",
-         "Power Clean",
-         "Squat Clean",
-         "Hang Clean",
-         "Hang Squat Clean",
-         "Snatch",
-         "Power Snatch",
-         "Squat Snatch",
-         "Hang Snatch",
-         "Hang Squat Snatch",
-         "Press",
-         "Strict Press",
-         "Push Press",
-         "Jerk",
-         "Push Jerk",
-         "Split Jerk",
-         ];
-         var workouts = [
-            "Amanda",
-            "Annie",
-            "Fran",
-            "Murph",
-            "Filthy Fifty"
-         ];
+</div>
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script>
+  $(".addWorkout").on('click', function(){
+  if($('.workoutList').hasClass('hidden')){
+      $('.workoutList').removeClass('hidden')
+      $('.movementsList').addClass('hidden')
+      $(".addWorkout h4").text("(-)Remove Workout");
+    } else {
+   if($('.movementsList').hasClass('hidden')){
+      $('.workoutList').addClass('hidden')
+      $('.movementsList').removeClass('hidden')
+      $(".addWorkout h4").text("(+)Add Workout");
+    }
+  };
+    });
+</script>
+<script>
+//Array of movements for the input box of workouts
+ $(function() {
+   var movements = [
+   "Pull Ups",
+   "Push Ups",
+   "Sit Ups",
+   "Clean",
+   "Power Clean",
+   "Squat Clean",
+   "Hang Clean",
+   "Hang Squat Clean",
+   "Snatch",
+   "Power Snatch",
+   "Squat Snatch",
+   "Hang Snatch",
+   "Hang Squat Snatch",
+   "Press",
+   "Strict Press",
+   "Push Press",
+   "Jerk",
+   "Push Jerk",
+   "Split Jerk",
+   ];
+   var workouts = [
+      "Amanda",
+      "Annie",
+      "Fran",
+      "Murph",
+      "Filthy Fifty"
+   ];
 
-         $( "#movements" ).autocomplete({
-           source: movements
-         });
-         $("#workoutList").autocomplete({
-           source: workouts
-         });
-         /*$(".repCount").autocomplete({
-           source: reps
-         });*/
-       });
-
-
-       </script>
-      <!--<script>
-        \$(".addWorkout").on('click', function(){
-        if(\$('.workoutList').hasClass('hidden')){
-      \$('.workoutList').removeClass('hidden')
-      \$('.movementsList').addClass('hidden')
-      \$(".addWorkout h4").text("(-)Remove Workout");
-          } else {
-         if(\$('.movementsList').hasClass('hidden')){
-      \$('.workoutList').addClass('hidden')
-      \$('.movementsList').removeClass('hidden')
-      \$(".addWorkout h4").text("(+)Add Workout");
-          }
-        };
-          });
+   $( "#movements" ).autocomplete({
+     source: movements
+   });
+   $("#workoutList").autocomplete({
+     source: workouts
+   });
+   $(".repCount").autocomplete({
+     source: reps
+   });
+ });
 
 
-      </script> -->
+ </script>
 </body>
 </html>
