styling nav and kettlebell login

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <figure ng-hide="loggedIn()" ng-click="login()">
         <a ><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
-          <figcaption>
+          <figcaption class="loginText">
             <a href="#"><h3>Login</h3></a>
           </figcaption>
       </figure>
