login auth function

--- a/login.html
+++ b/login.html
@@ -74,5 +74,10 @@
       </div>
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+      <script>
+        ref.authWithOAuthRedirect("facebook", function(error) {
+          remember: "default"
+        });
+      </script>
 </body>
 </html>
