add and delete movement functionality

--- a/index1.html
+++ b/index1.html
@@ -10,10 +10,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="container-fluid">
-    <background class="background-img">
-      <img src="images/boxbg.jpg" alt="">
-    </background>
+  <div class="container-fluid main-body">
     <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
