--- a/newwork.html
+++ b/newwork.html
@@ -9,11 +9,8 @@
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-  <div class="container-fluid">
-    <background class="background-img">
-      <img src="images/boxbg.jpg" alt="">
-    </background>
+<body ng-app="activ8">
+  <div class="container-fluid main-body" ng-controller="MainController">
     <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,11 +41,14 @@
     </div><!-- /.container-fluid -->
     </nav>
     <section class="main">
-    <!-- <h1>Cross Check <span class="glyphicon glyphicon-ok"></span></h1> -->
+      <form class="newMove">
       <div class="ui-widget movementsList">
-        <label class="whatWork" for="movements">What Did You Do Today?</label><br>
-        <input id="movements">
+        <ul class="listOfMoves">
+          <label class="whatWork" for="movements">What Did You Do Today?</label><br>
+          <li><input class="movements" placeholder="Movement"></li>
+        </ul>
       </div>
+      </form>
       <!-- <section class="movementInfo">
         <label class="reps" for="repCount">Reps:</label>
         <input class="repCount" type="text"><br>
@@ -57,19 +57,66 @@
       </section> -->
       <div class="ui-widget workoutList hidden">
         <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
-        <input id="workoutList">
+        <input id="workoutList" placeholder="Workout Name">
       </div>
-      <a href="#"><h4>(+)Add Movement</h4></a>
-      <a class="addWorkout removeWorkout" ><h4>(+)Add Workout</h4></a>
-    <button class="save btn btn-primary" type="submit">Save</button>
+      <section class="add">
+        <a class="addMovement"><h4>(+)Add Movement</h4></a>
+        <a class="addWorkout removeWorkout" ><h4>(+)Add Workout</h4></a>
+        <button class="save btn btn-primary" type="submit">Save</button>
+      </section>
   </div>
   </section>
 
 </div>
+<script src="bower_components/angular/angular.js"></script>
+<script src="fbAuth.js"></script>
+<script src="bower_components/firebase/firebase.js"></script>
+<script src="bower_components/angularfire/dist/angularfire.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
 <script>
+//Array of movements for the input box of workouts
+
+     var movements = [
+     "Pull Ups",
+     "Push Ups",
+     "Sit Ups",
+     "Clean",
+     "Power Clean",
+     "Squat Clean",
+     "Hang Clean",
+     "Hang Squat Clean",
+     "Snatch",
+     "Power Snatch",
+     "Squat Snatch",
+     "Hang Snatch",
+     "Hang Squat Snatch",
+     "Press",
+     "Strict Press",
+     "Push Press",
+     "Jerk",
+     "Push Jerk",
+     "Split Jerk",
+     ];
+     var workouts = [
+        "Amanda",
+        "Annie",
+        "Fran",
+        "Murph",
+        "Filthy Fifty"
+     ];
+
+     $( ".movements" ).autocomplete({
+       source: movements
+     });
+     $("#workoutList").autocomplete({
+       source: workouts
+     });
+     /*$(".repCount").autocomplete({
+       source: reps
+     });*/
   $(".addWorkout").on('click', function(){
   if($('.workoutList').hasClass('hidden')){
       $('.workoutList').removeClass('hidden')
@@ -81,53 +128,18 @@
       $('.movementsList').removeClass('hidden')
       $(".addWorkout h4").text("(+)Add Workout");
     }
-  };
+    };
+  });
+
+    $(".addMovement").on('click',function(){
+      $('.listOfMoves').append('<li><input class="movements" placeholder="Movement"><button type="button" class="btn btn-default deleteMove">X</button></li>');
+      $( ".movements" ).autocomplete({
+        source: movements
+      });
+    });
+    $('body').on('click', '.deleteMove', function(){
+      $(this).parent().remove()
     });
 </script>
-<script>
-//Array of movements for the input box of workouts
- $(function() {
-   var movements = [
-   "Pull Ups",
-   "Push Ups",
-   "Sit Ups",
-   "Clean",
-   "Power Clean",
-   "Squat Clean",
-   "Hang Clean",
-   "Hang Squat Clean",
-   "Snatch",
-   "Power Snatch",
-   "Squat Snatch",
-   "Hang Snatch",
-   "Hang Squat Snatch",
-   "Press",
-   "Strict Press",
-   "Push Press",
-   "Jerk",
-   "Push Jerk",
-   "Split Jerk",
-   ];
-   var workouts = [
-      "Amanda",
-      "Annie",
-      "Fran",
-      "Murph",
-      "Filthy Fifty"
-   ];
-
-   $( "#movements" ).autocomplete({
-     source: movements
-   });
-   $("#workoutList").autocomplete({
-     source: workouts
-   });
-   $(".repCount").autocomplete({
-     source: reps
-   });
- });
-
-
- </script>
 </body>
 </html>
