placeholder names in place

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <title>Activ8</title>
   <link href='http://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js'></script>
@@ -80,7 +80,7 @@
     <script>
 
 var activApp = angular.module("activApp", ["firebase"]);
-  myApp.controller('MyController', ['$scope', '$firebase',
+  activApp.controller('fbAuth', ['$scope', '$firebase',
     function($scope, $firebase) {
       var activ = new Firebase('https://activ8.firebaseio.com/');
       var auth = new FirebaseSimpleLogin(activ, function(error, user) {
@@ -94,7 +94,7 @@ var activApp = angular.module("activApp", ["firebase"]);
           // user is logged out
         }
       });
-    };
+    }
   ]);
 
 
