--- a/login.html
+++ b/login.html
@@ -1,41 +1,17 @@
 <!doctype html>
-<html lang="en" ng-app="activApp">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Activ8</title>
   <link href='http://fonts.googleapis.com/css?family=Stardos+Stencil' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js'></script>
-  <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
-  <script src='https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js'></script>
-  <style>
-    .userInfo {
-    	width: 200px;
-    	height: 150px;
-    	background: khaki;
-      margin: 30% auto 0 auto;
-    }
-    .main-body {
-      background: url(images/boxbg.jpg) no-repeat center center fixed;
-      -webkit-background-size: cover;
-      background-size: cover;
-    }
-    h2 {
-      color: white;
-      margin: 30% auto 0 auto;
-    }
-  </style>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
-<body ng-controller="fbAuth">
-  <div class="container-fluid main-body">
-    <div class="cover"></div>
-    <!-- <background class="background-img">
-      <img src="images/boxbg.jpg" alt="">
-    </background> -->
+<body ng-app="activ8">
+  <div class="container-fluid main-body" ng-controller="MainController as app" >
     <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -49,7 +25,10 @@
         <a class="navbar-brand" href="#">
         <img class="ree" src="images/reebokxfit.png" alt="">
         </a>
-        <a class="name" href="#"><section class="appName"><h1>Activ8</h1></section></a>
+        <a class="name" href="#">
+          <h1 class="appName navbar-left">Activ8</h1>
+          </a>
+        <button ng-show="loggedIn()" ng-click="logOut()" class="logout navbar-right btn">Logout</button>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -65,51 +44,102 @@
       </div> --><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
-    <section class="main">
-      <h2>Let's Get To Work</h2>
-      <section class="fbLogin">
-        <div class="userInfo">
-          <button type="button" ng-click="activ.login('facebook')">Login</button>
-        </div>
-        <footer><em>Privacy Policy</em></footer>
-      </section>
-    </section>
+    <section class="kettleBox" >
 
+      <figure ng-hide="loggedIn()" ng-click="login()">
+        <a ><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
+          <figcaption class="loginText">
+            <a href="#"><h3>Login</h3></a>
+          </figcaption>
+      </figure>
+
+      <footer><em>Privacy Policy</em></footer>
+    <!-- <h1>Cross Check <span class="glyphicon glyphicon-ok"></span></h1> -->
+      <!-- <div class="ui-widget movementsList">
+        <label class="whatWork" for="movements">What Did You Do Today?</label><br>
+        <input id="movements">
       </div>
+      <section class="movementInfo">
+        <label class="reps" for="repCount">Reps:</label>
+        <input class="repCount" type="text"><br>
+        <label class="rds" for="rdsCount">Rds:</label>
+        <input class="rdsCount" type="text">
+      </section>
+      <div class="ui-widget workoutList hidden">
+        <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
+        <input id="workoutList">
+      </div>
+      <a href="#"><h4>(+)Add Movement</h4></a>
+      <a class="addWorkout removeWorkout" ><h4>(+)Add Workout</h4></a>
+          <button class="save btn btn-primary" type="submit">Save</button>
+        </div> -->
+    </section>
+  </div>
 
-    <script>
+      <script src="bower_components/angular/angular.js"></script>
+      <script src="fbAuth.js"></script>
+      <script src="bower_components/firebase/firebase.js"></script>
+      <script src="bower_components/angularfire/dist/angularfire.js"></script>
+      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+      <script>
+      //Array of movements for the input box of workouts
+       $(function() {
+         var movements = [
+         "Pull Ups",
+         "Push Ups",
+         "Sit Ups",
+         "Clean",
+         "Power Clean",
+         "Squat Clean",
+         "Hang Clean",
+         "Hang Squat Clean",
+         "Snatch",
+         "Power Snatch",
+         "Squat Snatch",
+         "Hang Snatch",
+         "Hang Squat Snatch",
+         "Press",
+         "Strict Press",
+         "Push Press",
+         "Jerk",
+         "Push Jerk",
+         "Split Jerk",
+         ];
+         var workouts = [
+            "Amanda",
+            "Annie",
+            "Fran",
+            "Murph",
+            "Filthy Fifty"
+         ];
+         $( "#movements" ).autocomplete({
+           source: movements
+         });
+         $("#workoutList").autocomplete({
+           source: workouts
+         });
+         /*$(".repCount").autocomplete({
+           source: reps
+         });*/
+       });
+       </script>
+      <!--<script>
+        \$(".addWorkout").on('click', function(){
+        if(\$('.workoutList').hasClass('hidden')){
+      \$('.workoutList').removeClass('hidden')
+      \$('.movementsList').addClass('hidden')
+      \$(".addWorkout h4").text("(-)Remove Workout");
+          } else {
+         if(\$('.movementsList').hasClass('hidden')){
+      \$('.workoutList').addClass('hidden')
+      \$('.movementsList').removeClass('hidden')
+      \$(".addWorkout h4").text("(+)Add Workout");
+          }
+        };
+          });
+</script> -->
 
-var activApp = angular.module("activApp", ["firebase"]);
-  activApp.controller('fbAuth', ['$scope', '$firebase',
-    function($scope, $firebase) {
-      var activ = new Firebase('https://activ8.firebaseio.com/');
-      // var auth = new FirebaseSimpleLogin(activ, function(error, user) {
-      activ.authWithOAuthRedirect("facebook", function(error) {
-        remember: "default"
-        if (error) {
-          // an error occurred while attempting login
-          console.log(error);
-        } else if (user) {
-          // user authenticated with Firebase
-          console.log('User ID: ' + user.id + ', Provider: ' + user.provider);
-        } else {
-          // user is logged out
-        }
-      });
-    }
-  ]);
-
-
-
-
-    // auth.login('facebook');
-
-
-
-          // the permissions requested
-          // scope: "user_photos"
-          // Need to find profile pic, could be baseline
-
-      </script>
 </body>
 </html>
