simplelogin cdn used for testing

--- a/logintest.html
+++ b/logintest.html
@@ -6,6 +6,7 @@
 <script src="bower_components/firebase/firebase.js"></script>
 <script src="bower_components/angularfire/dist/angularfire.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="https://cdn.firebase.com/js/simple-login/1.6.4/firebase-simple-login.js"></script>
 
 <script>
   var ref = new Firebase("https://activ8.firebaseio.com");
