facebook still not allowing login, talking to Logan regarding settings

--- a/logintest.html
+++ b/logintest.html
@@ -6,6 +6,7 @@
 <script src="bower_components/firebase/firebase.js"></script>
 <script src="bower_components/angularfire/dist/angularfire.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 <script src="https://cdn.firebase.com/js/simple-login/1.6.4/firebase-simple-login.js"></script>
 
 <script>
@@ -36,6 +37,6 @@
 
   </head>
   <body>
-    <a href="#" id="fbLogin">Login Here</a>
+    <a href="#" id="fBlogin">Login Here</a>
   </body>
 </html>
