--- a/logintest.html
+++ b/logintest.html
@@ -11,6 +11,7 @@
 
 <script>
   var ref = new Firebase("https://activ8.firebaseio.com");
+  // var ref = new Firebase("https://intense-inferno-770.firebaseio.com/");
 
   var auth = new FirebaseSimpleLogin(ref, function(error, user) {
     // ref.onAuth(function(authData) {
